--- a/index.html
+++ b/index.html
@@ -280,6 +280,10 @@
         <button class="btn success" id="descargarWord">Descargar Word</button>
         <button class="btn success" id="exportCSV1">Exportar CSV (este)</button>
         <button class="btn ghost" id="clearAll">Borrar todo (limpiar formulario)</button>
+      <div class="acciones">
+        <button id="downloadWordMulti" class="btn">Descargar seleccionados en Word</button>
+        <button id="avisarHecho" class="btn red">Avisar hecho importante</button>
+      </div>
       </div>
       <h3>Vista previa HTML</h3>
       <div id="previewHtml" class="preview"></div>
