--- a/index.html
+++ b/index.html
@@ -2,222 +2,184 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Hechos Relevantes</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- Librería docx para exportar a Word -->
+  <title>Hechos Relevantes</title>
+  <link rel="stylesheet" href="styles.css">
   <script defer src="https://cdn.jsdelivr.net/npm/docx@8.5.0/build/index.umd.min.js"></script>
-
-  <!-- Lógica principal -->
-  <script defer src="assets/app.js"></script>
-
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; background:#f5f6f8; }
-    header { background:#1a237e; color:white; padding:15px; text-align:center; }
-    .container { max-width:1200px; margin:auto; padding:20px; }
-    h1,h2 { margin:15px 0; }
-    section { background:#fff; margin-bottom:20px; padding:15px; border-radius:6px; box-shadow:0 1px 4px rgba(0,0,0,0.1); }
-    label { display:block; margin:8px 0 5px; font-weight:bold; }
-    input, select, textarea { width:100%; padding:8px; margin-top:3px; border:1px solid #ccc; border-radius:4px; box-sizing:border-box; }
-    textarea { resize:vertical; }
-    button { margin:5px 5px 5px 0; padding:8px 14px; border:none; border-radius:4px; cursor:pointer; background:#1976d2; color:white; font-weight:bold; }
-    button:hover { background:#125a9c; }
-    button.ghost { background:#eee; color:#333; }
-    .badge { padding:3px 6px; border-radius:4px; font-size:13px; }
-    .badge.blue { background:#2196f3; color:white; }
-    .badge.red { background:#f44336; color:white; }
-    table { width:100%; border-collapse: collapse; margin-top:10px; font-size:14px; }
-    th, td { border:1px solid #ccc; padding:6px; text-align:left; }
-    th { background:#eee; }
-    #previewHtml { background:#fafafa; min-height:120px; padding:10px; border:1px solid #ccc; border-radius:4px; }
-    #errorBox { color:red; font-weight:bold; margin-top:10px; }
-    .chips { margin-top:10px; }
-    .chip { display:inline-block; margin:3px; padding:4px 8px; background:#e0e0e0; border-radius:20px; cursor:pointer; }
-  </style>
+  <script defer src="app.js"></script>
 </head>
 <body>
   <header>
     <h1>Hechos Relevantes</h1>
+    <img src="assets/LogoDDIC.png" alt="Logo DDIC" class="logo">
   </header>
-  <div class="container">
 
-    <!-- Datos generales -->
-    <section>
-      <h2>Datos generales</h2>
-      <label>Fecha: <input type="date" id="g_fecha_dia"></label>
-      <label>Tipo exp: 
-        <select id="g_tipoExp">
-          <option value="PU">PU</option>
-          <option value="IPP">IPP</option>
-          <option value="Otro">Otro</option>
-        </select>
-      </label>
-      <label>Número: <input type="text" id="g_numExp"></label>
-      <label>Partido: 
-        <select id="g_partido">
-          <option value="">—</option>
-          <option value="General Pueyrredon">General Pueyrredon</option>
-          <option value="Balcarce">Balcarce</option>
-          <option value="Mar Chiquita">Mar Chiquita</option>
-          <option value="General Alvarado">General Alvarado</option>
-        </select>
-      </label>
-      <label>Localidad: <select id="g_localidad"></select></label>
-      <label>Dependencia: <select id="g_dep"></select></label>
-      <div id="g_dep_manual_wrap" style="display:none;">
-        <label>Otra dependencia: <input type="text" id="g_dep_manual"></label>
+  <main>
+    <section class="card">
+      <h2>1) Carga de datos</h2>
+
+      <!-- Tabs -->
+      <div class="tabs">
+        <button class="tab-btn active" data-tab="tab-generales">Datos generales</button>
+        <button class="tab-btn" data-tab="tab-civiles">Civiles</button>
+        <button class="tab-btn" data-tab="tab-fuerzas">Personal Fuerzas</button>
+        <button class="tab-btn" data-tab="tab-objetos">Objetos</button>
+        <button class="tab-btn" data-tab="tab-cat">Catálogos</button>
       </div>
-      <label>Carátula: <input type="text" id="g_car"></label>
-      <label>Subtítulo: <input type="text" id="g_sub"></label>
-      <label>Esclarecido:
-        <select id="g_ok">
-          <option value="no">No</option>
-          <option value="si">Sí</option>
-        </select>
-      </label>
-      <label>UFI: <input type="text" id="g_ufi"></label>
-      <label>Coordenadas: <input type="text" id="g_coord"></label>
-      <label><input type="checkbox" id="g_relevante"> Relevante</label>
-      <label><input type="checkbox" id="g_supervisado"> Supervisado</label>
-    </section>
 
-    <!-- Involucrados civiles -->
-    <section>
-      <h2>Involucrados civiles</h2>
-      <label>Nombre: <input id="c_nombre"></label>
-      <label>Apellido: <input id="c_apellido"></label>
-      <label>Edad: <input id="c_edad"></label>
-      <label>Género: <input id="c_genero"></label>
-      <label>DNI: <input id="c_dni"></label>
-      <label>País: <input id="c_pais"></label>
-      <label>Localidad domicilio: <input id="c_loc"></label>
-      <label>Calle domicilio: <input id="c_calle"></label>
-      <label>Vínculo: 
-        <select id="c_vinculo">
-          <option>Victima</option>
-          <option>Imputado</option>
-          <option>Sindicado</option>
-          <option>Testigo</option>
-          <option>Denunciante</option>
-        </select>
-      </label>
-      <label>Óbito: 
-        <select id="c_obito">
-          <option value="false">No</option>
-          <option value="true">Sí</option>
-        </select>
-      </label>
-      <button id="addCivil">Agregar involucrado</button>
-      <div id="civilesList"></div>
-    </section>
+      <div class="tab-content active" id="tab-generales">
+        <label>Fecha <input type="date" id="g_fecha_dia"></label>
+        <label>Tipo 
+          <select id="g_tipoExp">
+            <option value="PU">PU</option>
+            <option value="IPP">IPP</option>
+            <option value="Otro">Otro</option>
+          </select>
+        </label>
+        <label>Número <input type="text" id="g_numExp"></label>
+        <label>Partido
+          <select id="g_partido"></select>
+        </label>
+        <label>Localidad
+          <select id="g_localidad"></select>
+        </label>
+        <label>Dependencia
+          <select id="g_dep"></select>
+        </label>
+        <div id="g_dep_manual_wrap" style="display:none">
+          <label>Dependencia manual <input type="text" id="g_dep_manual"></label>
+        </div>
+        <label>Carátula <input type="text" id="g_car"></label>
+        <label>Subtítulo <input type="text" id="g_sub"></label>
+        <label>Estado 
+          <select id="g_ok">
+            <option value="no">No esclarecido</option>
+            <option value="si">Esclarecido</option>
+          </select>
+        </label>
+        <label>UFI <input type="text" id="g_ufi"></label>
+        <label>Coordenadas <input type="text" id="g_coord"></label>
+        <label><input type="checkbox" id="g_relevante"> Relevante</label>
+        <label><input type="checkbox" id="g_supervisado"> Supervisado</label>
+      </div>
 
-    <!-- Personal de fuerza -->
-    <section>
-      <h2>Personal de fuerza</h2>
-      <label>Nombre: <input id="f_nombre"></label>
-      <label>Apellido: <input id="f_apellido"></label>
-      <label>Edad: <input id="f_edad"></label>
-      <label>Fuerza: <input id="f_fuerza"></label>
-      <label>Jerarquía: <input id="f_jerarquia"></label>
-      <label>Legajo: <input id="f_legajo"></label>
-      <label>Destino: <input id="f_destino"></label>
-      <label>Localidad domicilio: <input id="f_loc"></label>
-      <label>Calle domicilio: <input id="f_calle"></label>
-      <label>Vínculo: 
-        <select id="f_vinculo">
-          <option>Imputado</option>
-          <option>Sindicado</option>
-          <option>Detenido</option>
-        </select>
-      </label>
-      <label>Óbito: 
-        <select id="f_obito">
-          <option value="false">No</option>
-          <option value="true">Sí</option>
-        </select>
-      </label>
-      <button id="addFuerza">Agregar personal</button>
-      <div id="fuerzasList"></div>
-    </section>
+      <div class="tab-content" id="tab-civiles">
+        <div class="form-grid">
+          <input type="text" id="c_nombre" placeholder="Nombre">
+          <input type="text" id="c_apellido" placeholder="Apellido">
+          <input type="number" id="c_edad" placeholder="Edad">
+          <select id="c_genero">
+            <option value="">-</option>
+            <option value="M">M</option>
+            <option value="F">F</option>
+          </select>
+          <input type="text" id="c_dni" placeholder="DNI">
+          <input type="text" id="c_pais" placeholder="País de origen">
+          <input type="text" id="c_loc" placeholder="Localidad domicilio">
+          <input type="text" id="c_calle" placeholder="Calle domicilio">
+          <select id="c_vinculo">
+            <option>Victima</option>
+            <option>Imputado</option>
+            <option>Sindicado</option>
+            <option>Testigo</option>
+          </select>
+          <select id="c_obito">
+            <option value="false">No</option>
+            <option value="true">Sí</option>
+          </select>
+        </div>
+        <button id="addCivil" class="btn">Agregar involucrado</button>
+        <div id="civilesList"></div>
+      </div>
 
-    <!-- Objetos -->
-    <section>
-      <h2>Objetos</h2>
-      <label>Descripción: <input id="o_desc"></label>
-      <label>Vínculo: 
+      <div class="tab-content" id="tab-fuerzas">
+        <div class="form-grid">
+          <input type="text" id="f_nombre" placeholder="Nombre">
+          <input type="text" id="f_apellido" placeholder="Apellido">
+          <input type="number" id="f_edad" placeholder="Edad">
+          <input type="text" id="f_fuerza" placeholder="Fuerza">
+          <input type="text" id="f_jerarquia" placeholder="Jerarquía">
+          <input type="text" id="f_legajo" placeholder="Legajo">
+          <input type="text" id="f_destino" placeholder="Destino">
+          <input type="text" id="f_loc" placeholder="Localidad domicilio">
+          <input type="text" id="f_calle" placeholder="Calle domicilio">
+          <select id="f_vinculo">
+            <option>Imputado</option>
+            <option>Testigo</option>
+          </select>
+          <select id="f_obito">
+            <option value="false">No</option>
+            <option value="true">Sí</option>
+          </select>
+        </div>
+        <button id="addFuerza" class="btn">Agregar personal</button>
+        <div id="fuerzasList"></div>
+      </div>
+
+      <div class="tab-content" id="tab-objetos">
+        <input type="text" id="o_desc" placeholder="Descripción">
         <select id="o_vinc">
           <option>Secuestro</option>
           <option>Sustraccion</option>
           <option>Hallazgo</option>
           <option>Otro</option>
         </select>
-      </label>
-      <button id="addObjeto">Agregar objeto</button>
-      <div id="objetosList"></div>
+        <button id="addObjeto" class="btn">Agregar objeto</button>
+        <div id="objetosList"></div>
+      </div>
+
+      <div class="tab-content" id="tab-cat">
+        <label>Partido
+          <select id="cat_partidoSel"></select>
+        </label>
+        <label>Localidades<br><textarea id="cat_localidades"></textarea></label>
+        <label>Dependencias<br><textarea id="cat_dependencias"></textarea></label>
+        <button id="cat_guardar" class="btn">Guardar catálogo</button>
+        <button id="cat_reset" class="btn ghost">Restaurar ejemplo</button>
+      </div>
     </section>
 
-    <!-- Cuerpo -->
-    <section>
-      <h2>Cuerpo del hecho</h2>
-      <textarea id="cuerpo" rows="12"></textarea>
-      <div class="chips" id="tagHelper"></div>
+    <section class="card">
+      <h2>2) Resumen / Cuerpo</h2>
+      <textarea id="cuerpo"></textarea>
+      <div id="tagHelper"></div>
     </section>
 
-    <!-- Preview -->
-    <section>
+    <section class="card">
+      <h2>3) Acciones</h2>
+      <button id="generar" class="btn">Previsualizar</button>
+      <button id="copiarWA" class="btn">Copiar WhatsApp</button>
+      <button id="descargarWord" class="btn">Word</button>
+      <button id="downloadWordMulti" class="btn">Word seleccionados</button>
+      <button id="exportCSV" class="btn">CSV seleccionados</button>
+      <button id="saveCase" class="btn">Guardar</button>
+      <button id="updateCase" class="btn">Actualizar</button>
+      <button id="deleteCase" class="btn danger">Eliminar</button>
+      <button id="clearAll" class="btn ghost">Borrar todo</button>
+      <input type="file" id="restoreFile" hidden>
+      <input type="file" id="mergeFile" hidden>
+      <button id="backupJSON" class="btn">Backup JSON</button>
+      <button id="restoreJSON" class="btn">Restaurar JSON</button>
+      <button id="mergeJSON" class="btn">Fusionar JSON</button>
+    </section>
+
+    <section class="card">
+      <h2>0) Hechos guardados</h2>
+      <input type="text" id="caseSearch" placeholder="Buscar...">
+      <div id="casesList"></div>
+    </section>
+
+    <section class="card">
       <h2>Vista previa</h2>
       <div id="tituloCompuesto"></div>
       <div id="subCompuesto"></div>
       <div id="previewHtml"></div>
-      <div id="errorBox" hidden></div>
     </section>
+  </main>
 
-    <!-- Acciones -->
-    <section>
-      <h2>Acciones</h2>
-      <button id="generar">Generar vista previa</button>
-      <button id="copiarWA">Copiar para WhatsApp</button>
-      <button id="descargarWord">Descargar Word</button>
-      <button id="downloadWordMulti">Descargar seleccionados en Word</button>
-      <button id="avisarHecho" class="ghost">Avisar hecho importante</button>
-      <button id="clearAll" class="ghost">Borrar formulario</button>
-    </section>
-
-    <!-- Lista de casos -->
-    <section>
-      <h2>Hechos guardados</h2>
-      <label>Nombre auto generado: <input type="text" id="caseName"></label>
-      <input type="text" id="caseSearch" placeholder="Buscar...">
-      <div id="casesList">Sin hechos guardados.</div>
-      <div style="margin-top:10px;">
-        <button id="saveCase">Guardar hecho</button>
-        <button id="updateCase">Actualizar</button>
-        <button id="loadSelected">Cargar</button>
-        <button id="deleteCase">Borrar</button>
-        <button id="exportCSV">Exportar CSV</button>
-        <button id="backupJSON">Backup JSON</button>
-        <button id="restoreJSON">Restaurar</button>
-        <button id="mergeJSON">Fusionar</button>
-      </div>
-    </section>
-
-    <!-- Editor de catálogos -->
-    <section>
-      <h2>Editor de catálogos</h2>
-      <label>Partido: 
-        <select id="cat_partidoSel">
-          <option>General Pueyrredon</option>
-          <option>Balcarce</option>
-          <option>Mar Chiquita</option>
-          <option>General Alvarado</option>
-        </select>
-      </label>
-      <label>Localidades: <textarea id="cat_localidades" rows="5"></textarea></label>
-      <label>Dependencias: <textarea id="cat_dependencias" rows="5"></textarea></label>
-      <button id="cat_guardar">Guardar catálogos</button>
-      <button id="cat_reset" class="ghost">Restaurar valores</button>
-    </section>
-  </div>
+  <footer>
+    <small>Sistema interno DDIC</small>
+  </footer>
 </body>
 </html>
 
