--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hechos Relevantes</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="assets/styles.css">
+  <link rel="stylesheet" href="assets/tabs.css">
   <script defer src="https://cdn.jsdelivr.net/npm/docx@8.5.0/build/index.umd.min.js"></script>
-  <script defer src="app.js"></script>
 </head>
 <body>
   <header>
@@ -14,44 +13,36 @@
     <img src="assets/LogoDDIC.png" alt="Logo DDIC" class="logo">
   </header>
 
-  <main>
-    <section class="card">
+  <main class="container">
+    <div class="card">
       <h2>1) Carga de datos</h2>
-
-      <!-- Tabs -->
       <div class="tabs">
-        <button class="tab-btn active" data-tab="tab-generales">Datos generales</button>
-        <button class="tab-btn" data-tab="tab-civiles">Civiles</button>
-        <button class="tab-btn" data-tab="tab-fuerzas">Personal Fuerzas</button>
-        <button class="tab-btn" data-tab="tab-objetos">Objetos</button>
-        <button class="tab-btn" data-tab="tab-cat">Catálogos</button>
+        <div class="tab active">Datos generales</div>
+        <div class="tab">Civiles</div>
+        <div class="tab">Personal Fuerzas</div>
+        <div class="tab">Objetos</div>
+        <div class="tab">Catálogos</div>
       </div>
 
-      <div class="tab-content active" id="tab-generales">
+      <!-- Contenido tabs -->
+      <div class="tab-content active">
         <label>Fecha <input type="date" id="g_fecha_dia"></label>
-        <label>Tipo 
+        <label>Tipo
           <select id="g_tipoExp">
             <option value="PU">PU</option>
             <option value="IPP">IPP</option>
-            <option value="Otro">Otro</option>
           </select>
         </label>
         <label>Número <input type="text" id="g_numExp"></label>
-        <label>Partido
-          <select id="g_partido"></select>
-        </label>
-        <label>Localidad
-          <select id="g_localidad"></select>
-        </label>
-        <label>Dependencia
-          <select id="g_dep"></select>
-        </label>
-        <div id="g_dep_manual_wrap" style="display:none">
+        <label>Partido <select id="g_partido"></select></label>
+        <label>Localidad <select id="g_localidad"></select></label>
+        <label>Dependencia <select id="g_dep"></select></label>
+        <div id="g_dep_manual_wrap" style="display:none;">
           <label>Dependencia manual <input type="text" id="g_dep_manual"></label>
         </div>
         <label>Carátula <input type="text" id="g_car"></label>
         <label>Subtítulo <input type="text" id="g_sub"></label>
-        <label>Estado 
+        <label>Estado
           <select id="g_ok">
             <option value="no">No esclarecido</option>
             <option value="si">Esclarecido</option>
@@ -63,60 +54,57 @@
         <label><input type="checkbox" id="g_supervisado"> Supervisado</label>
       </div>
 
-      <div class="tab-content" id="tab-civiles">
-        <div class="form-grid">
-          <input type="text" id="c_nombre" placeholder="Nombre">
-          <input type="text" id="c_apellido" placeholder="Apellido">
-          <input type="number" id="c_edad" placeholder="Edad">
-          <select id="c_genero">
-            <option value="">-</option>
-            <option value="M">M</option>
-            <option value="F">F</option>
-          </select>
-          <input type="text" id="c_dni" placeholder="DNI">
-          <input type="text" id="c_pais" placeholder="País de origen">
-          <input type="text" id="c_loc" placeholder="Localidad domicilio">
-          <input type="text" id="c_calle" placeholder="Calle domicilio">
-          <select id="c_vinculo">
-            <option>Victima</option>
-            <option>Imputado</option>
-            <option>Sindicado</option>
-            <option>Testigo</option>
-          </select>
-          <select id="c_obito">
-            <option value="false">No</option>
-            <option value="true">Sí</option>
-          </select>
-        </div>
+      <div class="tab-content">
+        <h3>Civiles</h3>
+        <input type="text" id="c_nombre" placeholder="Nombre">
+        <input type="text" id="c_apellido" placeholder="Apellido">
+        <input type="number" id="c_edad" placeholder="Edad">
+        <select id="c_genero">
+          <option>-</option>
+          <option>Masculino</option>
+          <option>Femenino</option>
+        </select>
+        <input type="text" id="c_dni" placeholder="DNI">
+        <input type="text" id="c_pais" placeholder="País de origen">
+        <input type="text" id="c_loc" placeholder="Localidad domicilio">
+        <input type="text" id="c_calle" placeholder="Calle domicilio">
+        <select id="c_vinculo">
+          <option>Victima</option>
+          <option>Imputado</option>
+          <option>Sindicado</option>
+          <option>Testigo</option>
+        </select>
+        <select id="c_obito">
+          <option value="false">No</option>
+          <option value="true">Sí</option>
+        </select>
         <button id="addCivil" class="btn">Agregar involucrado</button>
         <div id="civilesList"></div>
       </div>
 
-      <div class="tab-content" id="tab-fuerzas">
-        <div class="form-grid">
-          <input type="text" id="f_nombre" placeholder="Nombre">
-          <input type="text" id="f_apellido" placeholder="Apellido">
-          <input type="number" id="f_edad" placeholder="Edad">
-          <input type="text" id="f_fuerza" placeholder="Fuerza">
-          <input type="text" id="f_jerarquia" placeholder="Jerarquía">
-          <input type="text" id="f_legajo" placeholder="Legajo">
-          <input type="text" id="f_destino" placeholder="Destino">
-          <input type="text" id="f_loc" placeholder="Localidad domicilio">
-          <input type="text" id="f_calle" placeholder="Calle domicilio">
-          <select id="f_vinculo">
-            <option>Imputado</option>
-            <option>Testigo</option>
-          </select>
-          <select id="f_obito">
-            <option value="false">No</option>
-            <option value="true">Sí</option>
-          </select>
-        </div>
+      <div class="tab-content">
+        <h3>Personal Fuerzas</h3>
+        <input type="text" id="f_nombre" placeholder="Nombre">
+        <input type="text" id="f_apellido" placeholder="Apellido">
+        <input type="number" id="f_edad" placeholder="Edad">
+        <input type="text" id="f_fuerza" placeholder="Fuerza">
+        <input type="text" id="f_jerarquia" placeholder="Jerarquía">
+        <input type="text" id="f_legajo" placeholder="Legajo">
+        <input type="text" id="f_destino" placeholder="Destino">
+        <select id="f_vinculo">
+          <option>Imputado</option>
+          <option>Victima</option>
+        </select>
+        <select id="f_obito">
+          <option value="false">No</option>
+          <option value="true">Sí</option>
+        </select>
         <button id="addFuerza" class="btn">Agregar personal</button>
         <div id="fuerzasList"></div>
       </div>
 
-      <div class="tab-content" id="tab-objetos">
+      <div class="tab-content">
+        <h3>Objetos</h3>
         <input type="text" id="o_desc" placeholder="Descripción">
         <select id="o_vinc">
           <option>Secuestro</option>
@@ -128,58 +116,57 @@
         <div id="objetosList"></div>
       </div>
 
-      <div class="tab-content" id="tab-cat">
-        <label>Partido
-          <select id="cat_partidoSel"></select>
-        </label>
-        <label>Localidades<br><textarea id="cat_localidades"></textarea></label>
-        <label>Dependencias<br><textarea id="cat_dependencias"></textarea></label>
+      <div class="tab-content">
+        <h3>Catálogos</h3>
+        <label>Partido <select id="cat_partidoSel"></select></label>
+        <label>Localidades <textarea id="cat_localidades"></textarea></label>
+        <label>Dependencias <textarea id="cat_dependencias"></textarea></label>
         <button id="cat_guardar" class="btn">Guardar catálogo</button>
         <button id="cat_reset" class="btn ghost">Restaurar ejemplo</button>
       </div>
-    </section>
+    </div>
 
-    <section class="card">
+    <div class="card">
       <h2>2) Resumen / Cuerpo</h2>
-      <textarea id="cuerpo"></textarea>
-      <div id="tagHelper"></div>
-    </section>
+      <textarea id="cuerpo" rows="12" placeholder="Redactá el cuerpo. Ej: Fecha... entrevistan con #victima:0 ..."></textarea>
+      <p>Estilos rápidos: *negrita*, _itálica_, !subrayado!.</p>
+      <div id="tagHelper" class="tags"></div>
+    </div>
 
-    <section class="card">
-      <h2>3) Acciones</h2>
-      <button id="generar" class="btn">Previsualizar</button>
-      <button id="copiarWA" class="btn">Copiar WhatsApp</button>
-      <button id="descargarWord" class="btn">Word</button>
-      <button id="downloadWordMulti" class="btn">Word seleccionados</button>
-      <button id="exportCSV" class="btn">CSV seleccionados</button>
-      <button id="saveCase" class="btn">Guardar</button>
-      <button id="updateCase" class="btn">Actualizar</button>
-      <button id="deleteCase" class="btn danger">Eliminar</button>
-      <button id="clearAll" class="btn ghost">Borrar todo</button>
-      <input type="file" id="restoreFile" hidden>
-      <input type="file" id="mergeFile" hidden>
-      <button id="backupJSON" class="btn">Backup JSON</button>
-      <button id="restoreJSON" class="btn">Restaurar JSON</button>
-      <button id="mergeJSON" class="btn">Fusionar JSON</button>
-    </section>
-
-    <section class="card">
-      <h2>0) Hechos guardados</h2>
+    <div class="card">
+      <h2>3) Hechos guardados</h2>
       <input type="text" id="caseSearch" placeholder="Buscar...">
+      <input type="text" id="caseName" placeholder="Se autocompleta con Carátula + Fecha + (PU)">
       <div id="casesList"></div>
-    </section>
+      <div class="actions">
+        <button id="saveCase" class="btn">Guardar hecho</button>
+        <button id="updateCase" class="btn">Actualizar</button>
+        <button id="deleteCase" class="btn ghost">Eliminar</button>
+        <button id="loadSelected" class="btn">Cargar seleccionado</button>
+        <button id="clearAll" class="btn ghost">Borrar formulario</button>
+      </div>
+      <div class="actions">
+        <button id="backupJSON" class="btn">Exportar JSON</button>
+        <input type="file" id="restoreFile" style="display:none">
+        <input type="file" id="mergeFile" style="display:none">
+        <button id="restoreJSON" class="btn ghost">Restaurar JSON</button>
+        <button id="mergeJSON" class="btn ghost">Fusionar JSON</button>
+      </div>
+      <div class="actions">
+        <button id="descargarWord" class="btn">Descargar Word</button>
+        <button id="downloadWordMulti" class="btn">Word (varios)</button>
+        <button id="exportCSV" class="btn">Exportar CSV</button>
+        <button id="copiarWA" class="btn">Copiar para WhatsApp</button>
+      </div>
+    </div>
 
-    <section class="card">
-      <h2>Vista previa</h2>
-      <div id="tituloCompuesto"></div>
-      <div id="subCompuesto"></div>
-      <div id="previewHtml"></div>
-    </section>
+    <div id="errorBox" hidden></div>
   </main>
 
-  <footer>
-    <small>Sistema interno DDIC</small>
-  </footer>
+  <script src="assets/tabs.js"></script>
+  <script src="assets/formatter.js"></script>
+  <script src="assets/app.js"></script>
 </body>
 </html>
+
 
