--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <h2>Encabezado</h2>
       <div class="grid-4">
         <div>
-          <label class="lbl">Fecha (dd-mm-aaaa)</label>
+          <label class="lbl">Fecha</label>
           <input type="date" id="g_fecha_dia">
         </div>
         <div>
@@ -46,7 +46,7 @@
           </select>
         </div>
         <div>
-          <label class="lbl">Nro</label>
+          <label class="lbl">Número</label>
           <input id="g_numExp" placeholder="ej. 270840">
         </div>
         <div>
@@ -114,7 +114,7 @@
     <div class="card">
       <div class="row sb">
         <h2>Cuerpo del hecho</h2>
-        <div class="muted">Podés usar etiquetas: #victima:0 #imputado:0 #secuestro #sustraccion #hallazgo #otro #pf:0</div>
+        <div class="muted">Etiquetas: #victima:0 #imputado:0 #secuestro #sustraccion #hallazgo #otro #pf:0</div>
       </div>
       <div id="tagHelper" class="chips"></div>
       <textarea id="cuerpo" rows="12" class="body-textarea" placeholder="Escribí el cuerpo del hecho aquí..."></textarea>
